k8s_manifests/deployment_service_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: quay.io/apoorvaj/helloworldapp:v1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
  sessionAffinity: None
  # Using the 'NodePort' type to expose the application on one of the ports of the application node.
  type: NodePort
