k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
  sessionAffinity: None
  type: NodePort
